SONAR-17200 Move to HikariCP from Apache DBCP